<resources>
    <string name="app_name">Learn english</string>
    <string name="decline">Отмена</string>
    <string name="accept">Принять</string>
    <string name="main_menu">Главное меню</string>
    <string name="word">Слово</string>
    <string name="settings">Настройки</string>
    <string name="repeating">Повторов: </string>
    <string name="expand">expand</string>
    <string name="date_repeat">Повторений осталось: </string>
    <string name="daily_repeating">Закреление</string>
    <string name="bananas">I\'ve bought three bananas today</string>
    <string name="next">Следующий</string>
    <string name="expressions1">Выражения #1</string>
    <string name="start">Начать</string>
    <string name="wordsCount">5 слов</string>
    <string name="eng_word">Слово на английском языке</string>
    <string name="rus_word">Слово на русском языке</string>
    <string name="add_translate">Добавить перевод</string>
    <string name="translate">Перевод</string>
    <string name="new_word">Новое слово:</string>
    <string name="eng_example">Пример на английском языке</string>
    <string name="rus_example">Перевод примера на русском языке</string>
    <string name="add_example">Добавить пример</string>
    <string name="cancel">Отмена</string>
    <string name="look">Просмотреть</string>
    <string name="doing_study">На изучении</string>
    <string name="done_study">Изучено</string>
    <string name="categories">Категории</string>
    <string name="repeating_date">Следующее повторение: </string>

    <string name="remember">Помню</string>
    <string name="repeat">Повторение</string>
    <string name="not_remember">Не помню</string>
    <string name="resetAllProgress">Сбросить весь прогресс</string>
    <string name="deleteAllWords">Удалить всё</string>
    <string name="Search">Поиск</string>
    <string name="current_progress">Текущий прогресс</string>
    <string name="delete">Delete</string>

    <string name="nearest_repeat">Ближайшее повторение: %s</string>
    <string name="necessary_to_repeat">Осталось повторить: %d</string>
    <string name="myExample">Пример #%d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vacation">Сегодня у Вас выходной!</string>
    <string name="ads">Показ рекламы помогает сделать обучение бесплатным</string>
    <string name="continuee">Продолжить</string>
    <string name="my_words">Мои слова</string>
</resources>
