<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/new_word"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />


    <EditText
        android:id="@+id/et_translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_wordExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />


    <EditText
        android:id="@+id/et_wordTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editWordExample2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editWordTranslate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addExample"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:text="@string/add_example"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

</LinearLayout>