<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_word"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/word"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_needRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_word"
                android:layout_marginTop="4dp"
                android:text="@string/date_repeat"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_countRepeating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_word"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/tv_needRepeat"
                android:text="@string/date_repeat"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_repeatingDate"
                android:text="@string/repeating_date"
                android:layout_below="@id/tv_countRepeating"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_dateRepeating"
                android:layout_toEndOf="@id/tv_repeatingDate"
                android:text="@string/repeating_date"
                android:layout_below="@id/tv_countRepeating"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>