<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/tv_countTodayRepeatWords"
            android:layout_below="@id/progressBar"
            android:textAlignment="center"
            android:text="Осталось повторить: 23 карточки"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.wajahatkarim3.easyflipview.EasyFlipView
            android:layout_centerInParent="true"
            android:id="@+id/easyFlipView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:flipDuration="250"
            app:flipEnabled="true"
            app:flipOnTouch="true"
            app:flipType="horizontal">

            <include layout="@layout/flash_card_layout_back" />

            <include layout="@layout/flash_card_layout_front" />

        </com.wajahatkarim3.easyflipview.EasyFlipView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/easyFlipView"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_notRememberWord"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="10dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#EB1B1B"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/decline"
                    android:src="@drawable/ic_dislike" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_rememberWord"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="10dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/next"
                app:cardBackgroundColor="#1AC53E"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/accept"
                    android:src="@drawable/ic_like" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

</RelativeLayout>