<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/layout_speakWordF"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_margin="5dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/im_speakWord"
                    android:src="@drawable/ic_edit"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="sound word" />

                <TextView
                    android:layout_toEndOf="@id/im_speakWord"
                    android:id="@+id/tv_wordB"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/eng_word"
                    android:textAlignment="center"
                    android:textSize="30sp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_wordTranslate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rus_word"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_wordExample"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/bananas"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_translateWordExample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Сегодня я купил три банана блин"
                android:textAlignment="center"
                android:textSize="12sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_wordExample1"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bananas"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_translateWordExample1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Сегодня я купил три банана блин"
                android:textAlignment="center"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>