<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/wordTextView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="word"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/repeating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wordTextView"
                android:layout_marginTop="4dp"
                android:text="@string/repeating"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/need_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/repeating"
                android:layout_marginTop="4dp"
                android:text="@string/date_repeat"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/date_repeating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/repeating"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/need_repeat"
                android:text="@string/date_repeat"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wordTextView"
                android:layout_toEndOf="@id/repeating"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/first_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:scaleX="0.5"
                    android:scaleY="0.5" />

                <RadioButton
                    android:id="@+id/second_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:scaleX="0.5"
                    android:scaleY="0.5" />

                <RadioButton
                    android:id="@+id/third_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:scaleX="0.5"
                    android:scaleY="0.5" />

                <RadioButton
                    android:id="@+id/fourth_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:scaleX="0.5"
                    android:scaleY="0.5" />

                <RadioButton
                    android:id="@+id/fifth_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:scaleX="0.5"
                    android:scaleY="0.5" />

                <RadioButton
                    android:id="@+id/sixth_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:scaleX="0.5"
                    android:scaleY="0.5" />
            </RadioGroup>

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/expand"
                android:src="@drawable/ic_expand_button" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>